2011-02-26  Adam Barth  <abarth@webkit.org>

Reviewed by Eric Seidel.

        <input value="type=submit"> throws a warning (“HTML parse error”)
        https://bugs.webkit.org/show_bug.cgi?id=55120

        This patch removes parse error messages from the HTML parser.  These
        messages are displayed at the wrong times, aren't tested, and aren't
        helpful.  We'll try again with some more informative messages and
        better testing.

        * html/parser/HTMLTreeBuilder.cpp:
        (WebCore::HTMLTreeBuilder::parseError):

Canonical link: https://commits.webkit.org/69733@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@79816 268f45cc-cd09-0410-ab3c-d52691b4dbfc